corrected scrolly spacing

--- a/chicago/css/scrolly.css
+++ b/chicago/css/scrolly.css
@@ -77,7 +77,7 @@ img {
 }
 
 #scrolly-overlay .scrolly article .step {
-    min-height: 75vh;
+    min-height: 93vh;
     margin-bottom: 0rem;
 }
 
@@ -104,7 +104,7 @@ img {
 #scrolly-overlay .scrolly figure.sticky {
     position: sticky;
     width: 100%;
-    height:73vh;
+    height:90vh;
     margin: 0;
     top: 6vh;
 
